# RoutheonSkups

./: README.md  Readmeviva.md  app.py  config.py  fix_onerror.py  graph_service.py  migrate_admin.py  migrate_db.py  models.py  promote_admin.py  pyproject.toml  replace_placeholders.py  requirements.txt  routes.py  services.py
database/: db.sqlite3
instance/: site.db  site_v2.db  site_v3.db
static/css/: responsive.css
static/js/: script.js
templates/: about.html  admin_dashboard.html  admin_users.html  ai_prompt.html  aichatbot.html  aipromptplanatrip.html  attraction.html  contact.html  destination.html  explore.html  faq.html  firstpage.html  itinerary.html  landing page.html  landing_page.html  login.html  plan_a_trip.html  plan_trip_step1.html  plan_trip_step2.0.html  plan_trip_step2.html  plan_trip_step3.html  plan_trip_step4.html  profile_page1.html  profile_page2.html  profile_page3.html  profile_page4.html  profile_page5.html  register.html  reset_token.html  secondpage.html  specific destination view.html  view_trip.html
templates/components/: footer.html  navbar.html
