[project]
name = "ai-routheonskups"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blinker>=1.9.0",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "groq>=1.0.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "werkzeug>=3.1.5",
]
